--- a/hw1/hw1.tex
+++ b/hw1/hw1.tex
@@ -280,13 +280,27 @@
 \begin{question}{Task 4 - Distinguishing Advantage (6 points)}
     \begin{part}
        \begin{answer}
-        
+        \textbf{Fact 1:} Pr$[D_1^{O_0} \Rightarrow 1] =  \underset{b_1 \overset{\text{\$}}{\leftarrow} \{0,1\}}{\text{Pr}}[b_1 = 1] = \frac{1}{2}$ \\\\
+        \textbf{Fact 2:} Pr$[D_1^{O_1} \Rightarrow 1] = \underset{b_1 \overset{\text{\$}}{\leftarrow} \{0,1\}}{\text{Pr}}[b_1 = 1] = \frac{1}{2}$ \\\\
+        $\textbf{Adv}_{O_0,O_1}^{\text{dist}}(D_1) = \lvert \frac{1}{2} - \frac{1}{2} \rvert = 0$
        \end{answer}
     \end{part}
 
     \begin{part}
         \begin{answer}
-         
+            \textbf{Fact 1:} Pr$[D_2^{O_0} \Rightarrow 1] = \underset{b_1 \overset{\text{\$}}{\leftarrow} \{0,1\}, b_2 \overset{\text{\$}}{\leftarrow} \{0,1\}}{\text{Pr}}[b_1 \oplus b_2 = 1] \\\\
+            \hspace*{100pt}= \underset{b_1 \overset{\text{\$}}{\leftarrow} \{0,1\}}{\text{Pr}}[b_1 = 1] \times  \underset{b_2 \overset{\text{\$}}{\leftarrow} \{0,1\}}{\text{Pr}}[b_2 = 0] + 
+            \underset{b_1 \overset{\text{\$}}{\leftarrow} \{0,1\}}{\text{Pr}}[b_1 = 0] \times  \underset{b_2 \overset{\text{\$}}{\leftarrow} \{0,1\}}{\text{Pr}}[b_2 = 1]\\\\
+            \hspace*{100pt}= \frac{1}{2} \times \frac{1}{2} + \frac{1}{2} \times \frac{1}{2} \\\\
+            \hspace*{100pt}= \frac{1}{2}$ \\\\
+
+            \textbf{Fact 2:} Pr$[D_2^{O_1} \Rightarrow 1] = \underset{b_1 \overset{\text{\$}}{\leftarrow} \{0,1\}, b_2 \overset{b_1}{\leftarrow} \{0,1\}}{\text{Pr}}[b_1 \oplus b_2 = 1] \\\\
+            \hspace*{100pt}= \underset{b_1 \overset{\text{\$}}{\leftarrow} \{0,1\}}{\text{Pr}}[b_1 = 1] \times  \underset{b_2 \leftarrow 0}{\text{Pr}}[b_2 = 0] + 
+            \underset{b_1 \overset{\text{\$}}{\leftarrow} \{0,1\}}{\text{Pr}}[b_1 = 0] \times  \underset{b_2 \overset{\text{\$}}{\leftarrow} \{0,1\}}{\text{Pr}}[b_2 = 1]\\\\
+            \hspace*{100pt}= \frac{1}{2} \times 1 + \frac{1}{2} \times \frac{1}{2} \\\\
+            \hspace*{100pt}= \frac{3}{4}$ \\\\
+
+            $\textbf{Adv}_{O_0,O_1}^{\text{dist}}(D_2) = \lvert \frac{3}{4} - \frac{1}{2} \rvert = \frac{1}{4}$
         \end{answer}
      \end{part}
 
